plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

group = 'com.culinary.portal'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

test {
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'com.h2database:h2:1.3.148'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.session:spring-session-data-redis:3.2.1'
	implementation 'redis.clients:jedis:2.8.1'

	implementation group: 'com.github.codemonstur', name: 'embedded-redis', version: '1.3.0'
	implementation group: 'com.google.cloud', name: 'spring-cloud-gcp-starter-sql-postgresql', version: '5.8.0'


	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'


	implementation 'javax.json:javax.json-api:1.1.4'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'mysql:mysql-connector-java:5.1.39'
	implementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
	implementation 'redis.clients:jedis:2.8.1'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'junit:junit:4.13.2'
	testImplementation 'org.assertj:assertj-core:3.25.3'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
	testImplementation 'org.jeasy:easy-random-core:5.0.0'
	testImplementation 'uk.co.jemos.podam:podam:8.0.2.RELEASE'
	testImplementation 'org.mockito:mockito-core:4.5.1'
	testImplementation 'org.mockito:mockito-inline:4.5.1'
}

jacoco {
	toolVersion = "0.8.12"
	reportsDirectory = layout.buildDirectory.dir('JacocoReports')
}

jacocoTestReport {
	reports {
		xml.required = false
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}

	afterEvaluate {
		classDirectories.setFrom(
				files(classDirectories.files.collect { fileTree(dir: it, exclude: [
						'**/com/culinary/**/model/**',
						'**/com/culinary/**/dto/**',
						'**/com/culinary/**/config/**',
						'**/com/culinary/**/configuration/**',
						'**/com/culinary/**/mapper/**',
						'**/com/culinary/**/exception/**',
						'**/com/culinary/**/CulinaryUserApplication.class',
				]) })
		)
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
